--- a/identity-server/package.json
+++ b/identity-server/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "budget-2",
+  "name": "identity-server",
   "version": "1.0.50",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@elysiajs/cookie": "^0.7.0",
+    "@elysiajs/html": "^0.7.3",
+    "@elysiajs/jwt": "^0.7.0",
+    "@prisma/client": "5.4.2",
     "elysia": "latest"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "bun-types": "latest",
+    "prisma": "^5.4.2"
   },
   "module": "src/index.js"
 }
